--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="options.css" media="screen" />
     <script src="jquery-3.2.0.min.js"></script>
-    <script src="require.js"></script>
+    <script src="shortcut_handler.js"></script>
 </head>
 
 <body>
