--- a/options.html
+++ b/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Test Extension Options</title>
+    <title>EmoCuts Options</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel="stylesheet" type="text/css" href="options.css" media="screen" />
     <script src="jquery-3.2.0.min.js"></script>
@@ -9,56 +9,75 @@
 </head>
 
 <body>
-    <p>
-        <div id="status-save" hidden="true">Options sauvegardée.</div>
-         <div id="status-restore" hidden="true">Options restorées aux valeurs par défauts.</div>
-    </p>
-    <p>
-        <span class="section" >Ouvrir le panel des emojis:</span>
-        <br/>
-        <div class="container-column">
-            <input type="text" id="open-emojis" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
+    <h1>EmoCuts</h1>
+    <div class="main">
+        <img id="logo" src="emocuts_icon.png" width="50" height="50">
+        <p>
+            <div id="status-save" hidden="true">Options sauvegardée.</div>
+            <div id="status-restore" hidden="true">Options restorées aux valeurs par défauts.</div>
+        </p>
+        <div>
+            <p>
+                <div class="inner">
+                    <div class="fb-blue">
+                        <span class="section" >Ouvrir le panel des emojis</span>
+                    </div>
+                    <br/>
+                     <div class="container-column">
+                        <input type="text" id="open-emojis" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
+                    </div>
+                </div>
+            </p>
+            <p>
+                <div class="inner">
+                    <div class="fb-blue">
+                        <span class="section" >Navigation entre les emojis</span>
+                    </div>
+                    <br/>
+                    <div class="container-column">
+                        <div style="width: 150px">
+                            <input type="text" id="up" class="shortcut px-130" placeholder="Saisissez vôtre raccourci" readonly/>
+                            <label class="direction">&uarr;</label>
+                        </div>
+                        <div style="width: 150px">
+                            <input type="text" id="right" class="shortcut px-130" placeholder="Saisissez vôtre raccourci" readonly/>
+                            <label class="direction">&larr;</label>
+                        </div>
+                        <div style="width: 150px">
+                            <input type="text" id="left" class="shortcut px-130" placeholder="Saisissez vôtre raccourci" readonly/>
+                            <label class="direction">&rarr;</label>
+                        </div>
+                        <div style="width: 150px">
+                            <input type="text" id="down" class="shortcut px-130" placeholder="Saisissez vôtre raccourci" readonly/>
+                            <label class="direction">&darr;</label>
+                        </div>
+                    </div>
+                </div>
+
+            </p>
+            <p>
+                <div class="inner">
+                    <div class="fb-blue">
+                        <span class="section" >Navigation entre les thèmes</span>
+                    </div>
+                    <br/>
+                    <div class="container-column">
+                        <label class="theme-select">Thème suivant</label>
+                        <input type="text" id="next" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
+                        <br/>
+                        <label class="theme-select">Thème précédent</label>
+                        <input type="text" id="previous" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
+                    </div>
+                </div>
+            </p>
         </div>
-    </p>
-    <p>
-        <span class="section" >Navigation entre les emojis:</span>
-        <br/>
-        <div class="container-column">
-            <div>
-                <input type="text" id="up" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
-                <label class="direction">&uarr;</label>
-            </div>
-            <div>
-                <input type="text" id="right" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
-                <label class="direction">&larr;</label>
-            </div>
-            <div>
-                <input type="text" id="left" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
-                <label class="direction">&rarr;</label>
-            </div>
-            <div>
-                <input type="text" id="down" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
-                <label class="direction">&darr;</label>
-            </div>
+
+        <div class="buttons">
+            <button id="save">Sauvegarder</button>
+            <button id="restore">Restorer les paramètres</button>
         </div>
+    </div>
 
-
-    </p>
-    <p>
-        <span class="section" >Navigation entre les thèmes:</span>
-        <br/>
-        <div class="container-column">
-            <label class="theme-select">Thème suivant</label>
-            <input type="text" id="next" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
-            <br/>
-            <label class="theme-select">Thème précédent</label>
-            <input type="text" id="previous" class="shortcut" placeholder="Saisissez vôtre raccourci" readonly/>
-        </div>
-    </p>
-
-
-    <button id="save">Sauvegarder</button>
-    <button id="restore">Restorer les paramètres</button>
     <script src="options.js"></script>
 </body>
 </html>
